--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=209.97.155.207
 DB_PORT=3306
 DB_DATABASE=medcare
-DB_USERNAME=root
-DB_PASSWORD=12345678
+DB_USERNAME=medcare-admin
+DB_PASSWORD=1234MEDcare
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
